fixed the venue heading alignment and hide the winner section if the winner is nil

--- a/app/assets/stylesheets/venues.css.scss
+++ b/app/assets/stylesheets/venues.css.scss
@@ -349,11 +349,12 @@ body.venue-page {
 }
 
 .venue-item-heading {
-  padding-left: 15px;
+  padding-left: 65px;
   font-weight: 500;
   color: #828181;
   width: 75%;
   margin-right: 0px;
+  display: block;
 }
 
 a:hover {
